# kl-then-steer

./: .gitattributes  .gitignore  .gitmodules  README.md  pyproject.toml
baselines/: autoDAN.py  gcg_eval.py  get_jailbreaks.py  jailbreak_utils.py
datasets/refusal/: augmented_questions.jsonl  augmented_questions_cybersecurity.jsonl  cybersecurity.jsonl  example_concepts.jsonl  example_jailbreaks.jsonl  filtered_questions.jsonl  gpt-3.5-turbo-16k-0613_abrasive_generated_concept_sentences.jsonl  gpt-3.5-turbo-16k-0613_acerbic_generated_concept_sentences.jsonl  gpt-3.5-turbo-16k-0613_acquiescence_generated_concept_sentences.jsonl  gpt-3.5-turbo-16k-0613_adamant_generated_concept_sentences.jsonl  gpt-3.5-turbo-16k-0613_affection_generated_concept_sentences.jsonl  gpt-3.5-turbo-16k-0613_age_bias_generated_questions.jsonl  gpt-3.5-turbo-16k-0613_age_bias_rephrased_questions.jsonl  gpt-3.5-turbo-16k-0613_age_bias_rephrased_questions_test.jsonl  gpt-3.5-turbo-16k-0613_amazement_generated_concept_sentences.jsonl  gpt-3.5-turbo-16k-0613_amoral_generated_concept_sentences.jsonl  gpt-3.5-turbo-16k-0613_animals_generated_concept_sentences.jsonl  gpt-3.5-turbo-16k-0613_answers_generated_concept_sentences.jsonl  gpt-3.5-turbo-16k-0613_antagonistic_generated_concept_sentences.jsonl  gpt-3.5-turbo-16k-0613_anticipation_generated_concept_sentences.jsonl  gpt-3.5-turbo-16k-0613_argumentative_generated_concept_sentences.jsonl  gpt-3.5-turbo-16k-0613_armed_robbery_generated_concept_sentences.jsonl  gpt-3.5-turbo-16k-0613_arrogant_generated_concept_sentences.jsonl  gpt-3.5-turbo-16k-0613_artifacts_generated_concept_sentences.jsonl  gpt-3.5-turbo-16k-0613_baking_generated_concept_sentences.jsonl  gpt-3.5-turbo-16k-0613_bellicose_generated_concept_sentences.jsonl  gpt-3.5-turbo-16k-0613_belligerent_generated_concept_sentences.jsonl  gpt-3.5-turbo-16k-0613_birds_generated_concept_sentences.jsonl  gpt-3.5-turbo-16k-0613_birdwatching_generated_concept_sentences.jsonl  gpt-3.5-turbo-16k-0613_bitter_generated_concept_sentences.jsonl  gpt-3.5-turbo-16k-0613_blackmail_generated_concept_sentences.jsonl  gpt-3.5-turbo-16k-0613_bliss_generated_concept_sentences.jsonl  gpt-3.5-turbo-16k-0613_blunt_generated_concept_sentences.jsonl  gpt-3.5-turbo-16k-0613_boastful_generated_concept_sentences.jsonl  gpt-3.5-turbo-16k-0613_body_type_bias_generated_questions.jsonl  gpt-3.5-turbo-16k-0613_body_type_bias_rephrased_questions.jsonl  gpt-3.5-turbo-16k-0613_body_type_bias_rephrased_questions_test.jsonl  gpt-3.5-turbo-16k-0613_body_type_bias_rephrased_questions_test_extra_diverse.jsonl  gpt-3.5-turbo-16k-0613_boredom_generated_concept_sentences.jsonl  gpt-3.5-turbo-16k-0613_bratty_generated_concept_sentences.jsonl  (+409 more)
finetuning/: finetune.py  steering.py  train_bash.py  trainer.py  workflow.py
finetuning/finetuning_data/: dataset_info.json
lat/: api_utils.py  classify.py  cli_chat.py  data.py  evaluate_results.py  evaluation_prompt.txt  filter_data.py  format_utils.py  generate_steering_vectors.py  generation_utils.py  model_response_cache.py  modeling.py  test_steering_vectors.py  trainer.py  utils.py  workflow.py
lat/data/: data.py  loader.py  preprocess.py  template.py
lat/finetuning/: dpo_workflow.py  finetune.py  ppo_trainer.py  ppo_workflow.py  reward_model.py  samples_callback.py  steering.py  steering_data.py  test_repe.py  trainer.py  workflow.py
lat/legacy/: generate_steering_vectors.py  generation_utils.py
lat/probes/: probing.py  run_toxicity_probes.py
results_2024-02-02/llama-2-7b-chat/: filtered_questions_style_question_pairs_gen_results.json  filtered_questions_style_question_pairs_gen_results_eval_results.json  refusal_data_A_B_cropped_gen_results.json  refusal_data_A_B_cropped_gen_results_eval_results.json  refusal_data_A_B_question_pairs_gen_results.json  refusal_data_A_B_question_pairs_gen_results_eval_results.json  refusal_data_full_answers_gen_results.json  refusal_data_full_answers_gen_results_eval_results.json
scripts/: convert_cache.py  evaluate_bias.py  evaluate_results.py  filter_data.py  format_test_data.py  format_training_data.py  gcg_eval.py  generate_steering_data.py  generate_training_answers.py  generate_training_data.py  legacy_test_steering_vectors.py  list_generated_samples.ipynb  print_results.py  process_data.ipynb  run_all_evaluation.sh  run_mt_evaluation.sh  test_repe.py  test_steering_data.py  test_steering_vectors.py
(+96 files in other folders)
