[tool.poetry]
name = "lat"
version = "0.1.0"
description = ""
authors = ["Asa Cooper Stickland <asacoopstick@gmail.com>"]

[tool.poetry.dependencies]
python = "3.11.5"
# python = "3.10.12"

# pypi packages
accelerate = "^0.27.2"
aiohttp = "3.8.5"
aiosignal = "1.3.1"
anthropic = "0.10.0"
argparse = "1.4.0"
async-timeout = "4.0.3"
attrs = "23.1.0"
certifi = "2023.7.22"
charset-normalizer = "3.2.0"
cmake = "3.27.5"
datasets = "2.14.5"
dill = "0.3.7"
einops = "0.6.1"
filelock = "3.12.4"
frozenlist = "1.4.0"
fsspec = "2023.6.0"
hjson = "3.1.0"
huggingface-hub = "^0.19.3"
idna = "3.4"
jinja2 = "3.1.2"
jsonlines = "4.0.0"
lit = "17.0.1"
markupsafe = "2.1.3"
mpmath = "1.3.0"
multidict = "6.0.4"
multiprocess = "0.70.15"
networkx = "3.1"
ninja = "1.11.1"
numpy = "1.26.0"
nvidia-cublas-cu11 = "11.10.3.66"
nvidia-cuda-cupti-cu11 = "11.7.101"
nvidia-cuda-nvrtc-cu11 = "11.7.99"
nvidia-cuda-runtime-cu11 = "11.7.99"
nvidia-cudnn-cu11 = "8.5.0.96"
nvidia-cufft-cu11 = "10.9.0.58"
nvidia-curand-cu11 = "10.2.10.91"
nvidia-cusolver-cu11 = "11.4.0.1"
nvidia-cusparse-cu11 = "11.7.4.91"
nvidia-nccl-cu11 = "2.14.3"
nvidia-nvtx-cu11 = "11.7.91"
openai = "1.9.0"
pandas = "2.1.1"
psutil = "5.9.5"
py-cpuinfo = "9.0.0"
pyarrow = "13.0.0"
python-dateutil = "2.8.2"
pytorch-triton-rocm = "2.0.2"
pytz = "2023.3.post1"
pyyaml = "6.0.1"
regex = "2023.8.8"
requests = "2.31.0"
safetensors = "^0.4.1"
sentencepiece = "0.1.99"
setuptools = "68.2.2"
six = "1.16.0"
sympy = "1.12"
tenacity = "8.2.3"
tensor-parallel = "2.0.0"
tokenizers = "^0.15.0"
torch = "2.0.1"
tqdm = "4.66.1"
transformers = "4.38.2"
triton = "2.0.0"
typing-extensions = "4.8.0"
tzdata = "2023.3"
urllib3 = "2.0.5"
xxhash = "3.3.0"
yarl = "1.9.2"
packaging = "^23.2"
wandb = "^0.16.4"
scikit-learn = "^1.4.1.post1"
python-dotenv = "^1.0.1"
llmtuner = "0.7.0"
repe = {git = "https://github.com/alexlyzhov/representation-engineering.git", rev = "3f14402"}


[tool.poetry.dev-dependencies]
black = "22.1.0"
poethepoet = "0.13.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
pythonVersion = "3.11"
exclude = ["wandb", "cache"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
